--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- Main Profile Card (hidden initially) -->
   <div class="profile-card" id="profileCard" style="display: none;">
-    <!-- New Dark/Light Mode Toggle Button -->
+    <!-- Dark/Light Mode Toggle -->
     <div class="mode-toggle" id="modeToggle" onclick="toggleTheme()">
       <i class="fas fa-moon" id="toggleIcon"></i>
     </div>
@@ -43,10 +43,14 @@
         <div class="track-title">Serana</div>
         <div class="track-artist">For Revenge</div>
       </div>
+      <a href="https://open.spotify.com/playlist/5dfvOTGaqtRkqAu4gT67gi?si=rjdfE1HdTPiHLf_FN1EljA" target="_blank" class="spotify-icon">
+        <i class="fab fa-spotify"></i>
+        <span class="spotify-hint">Klik Disini</span>
+      </a>
       <audio id="audio" src="img/For Revenge - Serana (Official Lyric Video).mp3"></audio>
     </div>
-
-    <h1 class="name">Raihan Fahrel Akbar</h1>
+    
+    <h1 class="name">RAIHAN FAHREL AKBAR</h1>
 
     <a href="https://goo.gl/maps/BsB42S88cQxTTZnbA" class="location-btn" target="_blank">
       <i class="fas fa-map-marker-alt"></i> Yosowilangun - Lumajang
@@ -56,7 +60,6 @@
       <button class="social-toggle" onclick="toggleSocial()">
         <i class="fas fa-share-alt"></i> Social Media
       </button>
-
       <div class="social-links" id="socialLinks">
         <a href="https://wa.me/qr/4ZLHO5QULSEGO1" class="social-icon whatsapp" target="_blank">
           <i class="fab fa-whatsapp"></i>
@@ -65,15 +68,16 @@
         <a href="https://www.instagram.com/rafa_.2312/" class="social-icon instagram" target="_blank">
           <i class="fab fa-instagram"></i>
           <span class="social-tooltip">Instagram</span>
-        <a href="https://www.tiktok.com/@rafa231206?_t=ZS-8xKTvAknCCH&_r=1" class="social-icon tiktok" target="_blank">
+        </a>
+        <a href="https://www.tiktok.com/@rafa231206" class="social-icon tiktok" target="_blank">
           <i class="fab fa-tiktok"></i>
           <span class="social-tooltip">TikTok</span>
         </a>
-        <a href="https://www.facebook.com/share/16C6JunMZt/" class="social-icon facebook" target="_blank">
+        <a href="https://www.facebook.com/share" class="social-icon facebook" target="_blank">
           <i class="fab fa-facebook-f"></i>
           <span class="social-tooltip">Facebook</span>
         </a>
-        <a href="https://x.com/Rafa_231206?t=6mn2N78mi_eMM1C6JpeEaQ&s=09" class="social-icon twitter" target="_blank">
+        <a href="https://x.com/Rafa_231206" class="social-icon twitter" target="_blank">
           <i class="fab fa-twitter"></i>
           <span class="social-tooltip">Twitter</span>
         </a>
@@ -81,7 +85,7 @@
     </div>
 
     <div class="username">
-      <acronym title="Raihan Fahrel, lahir tanggal 23 bulan 12">Rafa_2312</acronym>
+      <acronym title="Raihan Fahrel, lahir tanggal 23 bulan 12" text-de>Rafa_2312</acronym>
     </div>
   </div>
   <script src="script.js"></script>
