--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="track-title">Serana</div>
         <div class="track-artist">For Revenge</div>
       </div>
-      <a href="https://open.spotify.com/playlist/5dfvOTGaqtRkqAu4gT67gi?si=rjdfE1HdTPiHLf_FN1EljA" target="_blank" class="spotify-icon">
+      <a href="lagu.html" target="_blank" class="spotify-icon">
         <i class="fab fa-spotify"></i>
         <span class="spotify-hint">playlist</span>
       </a>
