--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <i class="fas fa-share-alt"></i> Social Media
       </button>
       <div class="social-links" id="socialLinks">
-        <a href="https://wa.me/qr/4ZLHO5QULSEGO1" class="social-icon whatsapp" target="_blank">
+        <a href="https://wa.me/6285184983950" class="social-icon whatsapp" target="_blank">
           <i class="fab fa-whatsapp"></i><span class="social-tooltip">WhatsApp</span>
         </a>
         <a href="https://www.instagram.com/rafa_.2312/" class="social-icon instagram" target="_blank">
